feat: DSTEW-780 Convert application status to ENUM (#64)
* feat: DSTEW-780 Convert application status to ENUM

---------

Signed-off-by: Samuele Mattiuzzo <1381563+samuele-mattiuzzo@users.noreply.github.com>
Co-authored-by: daniel.barnett <b4barnett@googlemail.com>